<resources>
    <string name="app_name">MVS</string>
    <string name="api_server">http://thongsiek.dyndns.biz:29020/</string>
    <string name="prompt_company">Company</string>
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_general_setting">Settings</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too sh♠ort</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_user_and_password">Incorrect user name and password.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_general_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_api_server_display_name">NAV Service Broker Server</string>
    <string name="pref_remember_user_name_display_name">Remember User Name</string>
    <string name="pref_remember_user_password">Remember Password</string>
    <string name="pref_api_server_key">pref_api_server</string>
    <string name="pref_gst_percentage_key">pref_gst_percentage_key</string>
    <string name="pref_remember_user_name_key">pref_remember_user_name</string>
    <string name="pref_remember_password_key">pref_remember_password</string>
    <string name="pref_select_printer_key">pref_select_printer</string>
    <string name="pref_update_sync_running_no">pref_update_sync_running_no</string>
    <string name="pref_update_sync_running_no_display_name">Update Running No From Server</string>
    <string name="pref_last_user_name">pref_last_user_name</string>
    <string name="pref_last_logging_year">pref_last_logging_year</string>
    <string name="pref_last_user_password">pref_last_user_password</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_testgtet_settings">Settings</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="notification_msg_no_permission_access_selected_company">You have no permission to access the selected company.</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_no_of_si_printouts">No Of Invoice Printouts</string>
    <string name="default_no_of_si_printouts">1</string>
    <string name="pref_no_of_si_printouts_key">pref_no_of_si_printouts</string>
    <string name="module_mso">MSO</string>
    <string name="module_mvs">MVS</string>
    <string name="module_lds">LDS</string>
    <string name="SyncScopeDownloadCustomer">SYNC_DL_CUSTOMER</string>
    <string name="SyncScopeDownloadCustomerSalesCodes">SYNC_DL_SALES_CODE</string>
    <string name="SyncScopeDownloadCustomerTemplate">SYNC_DL_CUS_TEMPLATE</string>
    <string name="SyncScopeDownLoadItem">SYNC_DL_ITEM</string>
    <string name="SyncScopeDownLoadItemCrossRef">SYNC_DL_ITEM_CROSS_REF</string>
    <string name="SyncScopeDownLoadItemCategory">SYNC_DL_ITEM_CATEGORY</string>
    <string name="SyncScopeDownLoadItemUom">SYNC_DL_ITEM_UOM</string>
    <string name="SyncScopeDownLoadGst">SYNC_DL_GST</string>
    <string name="SyncScopeDownLoadSalesPrice">SYNC_DL_SALES_PRICE</string>
    <string name="SyncScopeDownLoadSO">SYNC_DL_SO</string>
    <string name="SyncScopeDownLoadSR">SYNC_DL_SR</string>
    <string name="SyncScopeDownLoadSRLine">SYNC_DL_SR_LINEe</string>
    <string name="SyncScopeUploadSO">SYNC_UP_SO</string>
    <string name="SyncScopeUploadSI">SYNC_UP_SI</string>
    <string name="SyncScopeDownItemBalance">SYNC_DL_ITEM_BALANCE</string>
    <string name="SyncScopeUploadRunningNos">SYNC_UP_RUNNING_NOS</string>
    <string name="SyncScopeUploadPayment">SYNC_UP_PAYMENT</string>
    <string name="SyncScopeSoDeliveryFlag">SYNC_UP_DELIVERY_FLAG</string>
    <string name="SyncScopePdf">SYNC_UP_PDF</string>
    <string name="SyncScopeSendEmail">SYNC_SEND_EMAIL</string>
    <string name="SalesOrderStatusPending">0</string>
    <string name="SalesOrderStatusConfirmed">1</string>
    <string name="SalesOrderStatusComplete">2</string>
    <string name="SalesOrderStatusDelivery">3</string>
    <string name="SalesPaymentStatusPending">0</string>
    <string name="SalesPaymentStatusConfirmed">1</string>
    <string name="PaymentTypeCash">0</string>
    <string name="PaymentTypeCheque">1</string>
    <string name="Country">Singapore</string>
    <string name="mobile">Mobile</string>
    <string name="StockTransferIn">IN</string>
    <string name="StockTransferOut">OUT</string>
    <string name="StockTransferStatusPending">0</string>
    <string name="StockTransferStatusConfirmed">1</string>
    <string name="StockTransferStatusComplete">2</string>
    <string name="SyncScopeUploadSOImage">SYNC_UP_SO_IMAGE</string>
    <string name="SyncScopeUploadSR">SYNC_UP_SR</string>
    <string name="SyncScopeCreateStockBalSumPdf">SYNC_CREATE_STOCK_BAL_SUMMARY_PDF</string>
    <string name="SyncScopeDownLoadItemImage">SYNC_DL_ITEM_IMAGE</string>
    <string name="StockRequestStatusPending">0</string>
    <string name="StockRequestStatusConfirmed">1</string>
    <string name="StockRequestStatusComplete">2</string>
    <string name="MVSSalesOrderStatusPending">0</string>
    <string name="MVSSalesOrderStatusConfirmed">1</string>
    <string name="MVSSalesOrderStatusComplete">2</string>
    <string name="MVSSalesOrderStatusConverted">3</string>
    <string name="MVSSalesOrderStatusVoid">4</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="searching">Searching item details..</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_purchase_order">Purchase Order</string>
    <string name="title_activity_grn">Purchase Receipt</string>
    <string name="title_activity_transfer_in">Transfer In</string>
    <string name="title_activity_transfer_out">Transfer Out</string>
    <string name="title_activity_production_paste_group">Prod. Semi-Finished</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="title_activity_warehouse_shipment">Warehouse Shipment</string>
    <string name="title_activity_production_finishedgoods">Production Finished Goods</string>
    <string name="underline_production_date">Production Date</string>
    <string name="underline_expiry_date">Expiry Date</string>
    <string name="underline_qty_received">Quantity</string>
    <string name="underline_lot_number">Lot Number</string>
    <string name="title_activity_grnorder_detail_lot_entry">GRNOrderDetailLotEntryActivity</string>
    <string name="title_activity_transfer_in_line">TransferInLineActivity</string>
    <string name="title_activity_warehouse_shipment_line">WarehouseShipmentLineActivity</string>
    <string name="title_activity_production_paste_group_bom">ProductionPasteGroupBOMActivity
    </string>
    <string name="title_activity_production_finished_goods">ProductionFinishedGoodsActivity</string>
    <string name="title_activity_item_reclass_line">Item Reclass Line</string>
    <string name="notification_title_error">ERROR</string>
    <string name="notification_msg_unable_to_retrieve">Unable to retrieve company list. Please check internet connection and server endpoint! </string>
    <string name="notification_title_no_connection">NO INTERNET CONNECTION</string>
    <string name="notification_msg_no_connection">Unable to connect to server. Please check your internet connection and retry.</string>
    <string name="notification_msg_no_company">There is no company selected. Please reload.</string>
    <string name="notification_title_no_permission">NO PERMISSION</string>
    <string name="notification_msg_no_permission">You have no permission to use this app.</string>
    <string name="notification_msg_server_no_response">No response from server. Please check internet connection and whether server is online.</string>
    <string name="notification_title_quantity_exceeds">Invalid Quantity</string>
    <string name="notification_msg_quantity_exceeds">Quantity exceeds lot remaining quantity.</string>
    <string name="notification_msg_quantity_exceeds_available">Quantity exceeds lot available quantity.</string>
    <string name="notification_title_clear_invalid">Clear Entry</string>
    <string name="notification_msg_clear_invalid">Quantity is zero. Nothing to clear.</string>
    <string name="notification_title_invalid_lotno">Invalid Lot No</string>
    <string name="notification_msg_invalid_lotno">Lot No. does not belong to this order</string>
    <string name="notification_title_confirmation">Confirmation</string>
    <string name="notification_msg_confirmation">Are you sure want to post the order?</string>
    <string name="notification_msg_confirmation_stock_take">Are you sure want to post the stock take?</string>
    <string name="notification_msg_confirmation_item_reclass">Are you sure want to post the item reclass?</string>
    <string name="notification_msg_no_item_found">No Item Found!</string>
    <string name="notification_title_routing_missing_fields">MISSING FIELDS</string>
    <string name="notification_msg_routing_missing_fields">Please enter both Routing and Operation No.</string>
    <string name="no_data">There is no data to display</string>
    <string name="post">post</string>
    <string name="dummy_docno">Doc No.: </string>
    <string name="dummy_item_description"></string>
    <string name="dummy_qty_to_transfer">Qty to trn: </string>
    <string name="scan_2D_code_text">Scan 2D Code</string>
    <string name="quantity_short_text">Qty</string>
    <string name="production_date_short_text">Prod Date</string>
    <string name="expiry_date_short_text">Exp. Date</string>
    <string name="lot_no_text">Lot No.</string>
    <string name="add_entry_text">Add Entry</string>
    <string name="scan_text">SCAN</string>
    <string name="vendor_shipment_text">Vendor Shipment No</string>
    <string name="select_default_printer">Select default printer</string>
    <string name="printer_honeywell">Honeywell</string>
</resources>