<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    tools:context=".ui.GRNOrderLotEntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:paddingLeft="5dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblItemDescription"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/lblItemIDUom"
                android:textSize="12sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:id="@+id/lblPurchaseQuantity"
                android:textSize="12sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/lblIndex"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginRight="4dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/production_date_short_text"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/expiry_date_short_text"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity_short_text"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/lot_no_text"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="40dp"
                android:layout_height="18dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"/>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/black"/>

        <ListView
            android:id="@+id/itemList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
    </LinearLayout>

</LinearLayout>
